--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>수비학 타로 풀이</title>
+  <title>타로 운세 풀이</title>
   <style>
     :root {
-      --primary-color: #4caf50;
-      --primary-hover: #388e3c;
-      --bg-color: #f2f2f2;
-      --box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+      --primary-color: #9b6dff;
+      --primary-hover: #8255e6;
+      --bg-color: #f5f0ff;
+      --box-shadow: 0 4px 15px rgba(155, 109, 255, 0.2);
+      --border-color: #d4c0ff;
     }
 
     * {
@@ -19,216 +20,247 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      font-family: 'Segoe UI', Arial, sans-serif;
       background: var(--bg-color);
       margin: 0;
-      padding: 0;
+      padding: 20px;
       line-height: 1.6;
       word-break: keep-all;
+      background-image: 
+        radial-gradient(circle at 50% 50%, rgba(155, 109, 255, 0.1) 0%, transparent 60%),
+        url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="20" height="20" opacity="0.05"><text x="50%" y="50%" text-anchor="middle" dy=".35em" font-size="80">✦</text></svg>');
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 6px;
+      background: rgba(255, 255, 255, 0.95);
+      padding: 30px;
+      border-radius: 15px;
       box-shadow: var(--box-shadow);
+      border: 1px solid var(--border-color);
     }
 
     h1 {
-      font-size: 1.8rem;
-      margin: 0 0 15px 0;
-      color: #333;
+      font-size: 2.2rem;
+      margin: 0 0 20px 0;
+      color: var(--primary-color);
       text-align: center;
+      text-shadow: 0 0 10px rgba(155, 109, 255, 0.3);
+      font-weight: bold;
+      letter-spacing: 0.1em;
+    }
+
+    h1::before, h1::after {
+      content: "✧";
+      color: var(--primary-color);
+      margin: 0 15px;
+      font-size: 1.5rem;
     }
 
     h2 {
-      font-size: 1.3rem;
-      margin: 15px 0;
-      color: #444;
+      font-size: 1.5rem;
+      margin: 20px 0;
+      color: var(--primary-color);
+      border-bottom: 2px solid rgba(155, 109, 255, 0.3);
+      padding-bottom: 10px;
     }
 
     h3 {
-      font-size: 1.1rem;
-      margin: 10px 0;
+      font-size: 1.2rem;
+      margin: 15px 0;
+      color: #6a4ca6;
     }
 
     p {
       margin: 15px 0;
       text-align: center;
       line-height: 1.8;
+      color: #666;
     }
 
     .input-area {
-      background: #fafafa;
-      border-radius: 8px;
-      padding: 15px;
-      margin-bottom: 20px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      background: rgba(245, 240, 255, 0.5);
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 25px;
+      box-shadow: 0 2px 6px rgba(155, 109, 255, 0.1);
+      border: 1px solid var(--border-color);
     }
 
     .input-group {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     .input-area label {
       display: block;
       width: 100%;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
       font-weight: bold;
-      color: #333;
+      color: #6a4ca6;
     }
 
     .input-area input {
       width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      padding: 12px;
+      border: 1px solid var(--border-color);
+      border-radius: 6px;
       font-size: 16px;
+      background: rgba(255, 255, 255, 0.9);
+      transition: all 0.3s ease;
+    }
+
+    .input-area input:focus {
+      outline: none;
+      border-color: var(--primary-color);
+      box-shadow: 0 0 10px rgba(155, 109, 255, 0.2);
     }
 
     button {
       width: 100%;
-      padding: 12px;
+      padding: 15px;
       background: var(--primary-color);
       color: white;
       border: none;
-      border-radius: 4px;
-      font-size: 16px;
+      border-radius: 6px;
+      font-size: 18px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: all 0.3s ease;
+      font-weight: bold;
+      letter-spacing: 0.1em;
+      box-shadow: 0 4px 15px rgba(155, 109, 255, 0.3);
     }
 
     button:hover {
       background: var(--primary-hover);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(155, 109, 255, 0.4);
     }
 
     table.result-table {
       width: 100%;
-      border-collapse: collapse;
-      margin: 15px 0;
-      font-size: 14px;
-      background: #fff;
+      border-collapse: separate;
+      border-spacing: 0;
+      margin: 20px 0;
+      font-size: 15px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 8px;
+      overflow: hidden;
+      border: 1px solid var(--border-color);
     }
 
     #resultSection {
-      margin-top: 20px;
-      display: none;
+      margin-top: 30px;
     }
 
     #resultSection > div {
-      margin-bottom: 25px;
-      background: #fff;
-      border-radius: 8px;
-      padding: 15px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(155, 109, 255, 0.1);
+      border: 1px solid var(--border-color);
     }
 
     th, td {
-      border: 1px solid #ddd;
-      padding: 10px;
+      border: 1px solid var(--border-color);
+      padding: 12px;
       text-align: center;
+      color: #666;
     }
 
     th {
-      background: #f5f5f5;
+      background: var(--primary-color);
+      color: white;
+      font-weight: normal;
     }
 
     .interpret-box {
-      background: #fff;
-      border: 1px solid #ddd;
+      background: rgba(245, 240, 255, 0.5);
+      border: 1px solid var(--border-color);
       border-radius: 8px;
-      padding: 15px;
-      margin: 15px 0;
+      padding: 20px;
+      margin: 20px 0;
     }
 
     .interpret-text {
       white-space: pre-wrap;
-      line-height: 1.7;
-      font-size: 14px;
+      line-height: 1.8;
+      font-size: 15px;
+      color: #666;
     }
 
     .kakao-link {
       display: block;
       width: 100%;
       max-width: 300px;
-      margin: 20px auto;
-      padding: 12px;
+      margin: 30px auto;
+      padding: 15px;
       background: #FEE500;
       color: #000;
       text-align: center;
       text-decoration: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-weight: bold;
-      transition: opacity 0.3s ease;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
     .kakao-link:hover {
       opacity: 0.9;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
     }
 
     .footer-text {
       text-align: center;
-      margin: 20px 0;
-      font-size: 1.2rem;
-      color: #333;
+      margin: 30px 0;
+      font-size: 1.3rem;
+      color: var(--primary-color);
+      font-weight: bold;
+      text-shadow: 0 0 10px rgba(155, 109, 255, 0.2);
     }
 
     /* 모바일 최적화 */
     @media screen and (max-width: 768px) {
       body {
-        background: #fff;
+        padding: 10px;
       }
 
       .container {
-        padding: 15px;
-        margin: 0;
-        box-shadow: none;
-        border-radius: 0;
+        padding: 20px;
       }
 
       h1 {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
       }
 
-      h2 {
+      h1::before, h1::after {
+        margin: 0 10px;
         font-size: 1.2rem;
       }
 
       .input-area {
-        padding: 12px;
+        padding: 15px;
       }
 
-      table {
-        font-size: 13px;
-      }
-
-      th, td {
-        padding: 8px 4px;
-      }
-
-      .interpret-text {
-        font-size: 13px;
+      .footer-text {
+        font-size: 1.1rem;
       }
     }
 
     /* 작은 모바일 화면 최적화 */
     @media screen and (max-width: 320px) {
       .container {
-        padding: 10px;
+        padding: 15px;
       }
 
       h1 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
       }
 
       .input-area input {
         font-size: 14px;
-      }
-
-      table {
-        font-size: 12px;
       }
     }
   </style>
@@ -236,12 +268,13 @@
 
 <body>
 <div class="container">
-  <h1>수비학 타로 풀이</h1>
-  <p>숫자로 여러분의 운명을 확인해 보세요 <strong>사주풀이,올해운세</strong> 해석해 드립니다.<br>
-     올해도 항상 응원하겠습니다.</p>
+  <h1>타로 운세 풀이</h1>
+  <p>신비로운 타로의 세계로 여러분을 초대합니다<br>
+     <strong>운명의 길잡이 · 사랑타로 · 직업운</strong><br>
+     진실된 마음으로 상담해드리겠습니다</p>
 
   <div class="input-area">
-    <h2>양력 날짜</h2>
+    <h2>양력 생년월일</h2>
     <div class="input-group">
       <label>연도 (YYYY)</label>
       <input type="number" id="solarYear" placeholder="예: 1990">
@@ -257,7 +290,7 @@
   </div>
 
   <div class="input-area">
-    <h2>음력 날짜</h2>
+    <h2>음력 생년월일</h2>
     <div class="input-group">
       <label>연도 (YYYY)</label>
       <input type="number" id="lunarYear" placeholder="예: 1990">
@@ -273,81 +306,72 @@
   </div>
 
   <div class="input-area">
-    <h2>운세년도 & 이름</h2>
+    <h2>이름</h2>
     <div class="input-group">
-      <label>운세년도</label>
-      <input type="number" id="haeunYear" placeholder="예: 2024" value="2024">
+      <label>성함</label>
+      <input type="text" id="userName" placeholder="성함을 입력해 주세요">
     </div>
-    <div class="input-group">
-      <label>이름</label>
-      <input type="text" id="userName" placeholder="이름을 입력하세요">
-    </div>
+    <input type="hidden" id="haeunYear" value="2025">
   </div>
 
-  <button onclick="calculateAll()">계산하기</button>
+  <button onclick="calculateAll()">타로 운세 보기</button>
 
   <div id="resultSection">
-    <h2>결과</h2>
+    <h2>운세 결과</h2>
 
-    <!-- 1) 양력 사주 -->
     <div id="solarSajuDiv" style="display:none;">
-      <h3>양력 사주값</h3>
+      <h3>양력 운세</h3>
       <table id="solarSajuTable" class="result-table"></table>
       <div class="interpret-box" id="solarInterpretBoxFirst" style="display:none;">
-        <h3>양력 사주풀이 (첫번째 값)</h3>
+        <h3>첫 번째 카드의 메시지</h3>
         <div class="interpret-text" id="solarInterpretTextFirst"></div>
       </div>
       <div class="interpret-box" id="solarInterpretBoxSecond" style="display:none;">
-        <h3>양력 사주풀이 (두번째 값)</h3>
+        <h3>두 번째 카드의 메시지</h3>
         <div class="interpret-text" id="solarInterpretTextSecond"></div>
       </div>
     </div>
 
-    <!-- 2) 음력 사주 -->
     <div id="lunarSajuDiv" style="display:none;">
-      <h3>음력 사주값</h3>
+      <h3>음력 운세</h3>
       <table id="lunarSajuTable" class="result-table"></table>
       <div class="interpret-box" id="lunarInterpretBoxFirst" style="display:none;">
-        <h3>음력 사주풀이 (첫번째 값)</h3>
+        <h3>첫 번째 카드의 메시지</h3>
         <div class="interpret-text" id="lunarInterpretTextFirst"></div>
       </div>
       <div class="interpret-box" id="lunarInterpretBoxSecond" style="display:none;">
-        <h3>음력 사주풀이 (두번째 값)</h3>
+        <h3>두 번째 카드의 메시지</h3>
         <div class="interpret-text" id="lunarInterpretTextSecond"></div>
       </div>
     </div>
 
-    <!-- 해운(양력) -->
     <div id="solarHaeunDiv" style="display:none;">
-      <h3>운세값 (양력)</h3>
+      <h3>2025년 운세 (양력)</h3>
       <table id="solarHaeunTable" class="result-table"></table>
       <div class="interpret-box" id="solarHaeunInterpretBox" style="display:none;">
-        <h3>양력 운세풀이</h3>
+        <h3>2025년 운세 해석</h3>
         <div class="interpret-text" id="solarHaeunInterpretText"></div>
       </div>
     </div>
 
-    <!-- 해운(음력) -->
     <div id="lunarHaeunDiv" style="display:none;">
-      <h3>운세값 (음력)</h3>
+      <h3>2025년 운세 (음력)</h3>
       <table id="lunarHaeunTable" class="result-table"></table>
       <div class="interpret-box" id="lunarHaeunInterpretBox" style="display:none;">
-        <h3>음력 운세풀이</h3>
+        <h3>2025년 운세 해석</h3>
         <div class="interpret-text" id="lunarHaeunInterpretText"></div>
       </div>
     </div>
 
-    <!-- 이름풀이 -->
     <div id="nameDiv" style="display:none;">
-      <h3>이름풀이 (글자별)</h3>
+      <h3>이름 타로</h3>
       <table id="nameTable" class="name-table result-table"></table>
     </div>
   </div>
 </div>
 
-<h2 class="footer-text">위 내용이 70%정도 맞으셨다면 클릭하세요! 당신의 미래도 알려 드립니다.</h2>
-<a href="http://pf.kakao.com/_Cgxcdn
-" class="kakao-link">카카오톡 채널 바로가기</a>
+<h2 class="footer-text">더 자세한 타로 상담이 필요하시다면 아래를 클릭해주세요</h2>
+<a href="http://pf.kakao.com/_Cgxcdn" class="kakao-link">카카오톡 상담 바로가기</a>
 
 <script src="script.js"></script>
 </body>
