--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>타로 운세 풀이</title>
+  <title>수비학 운세</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+
     :root {
-      --primary-color: #9b6dff;
-      --primary-hover: #8255e6;
-      --bg-color: #f5f0ff;
-      --box-shadow: 0 4px 15px rgba(155, 109, 255, 0.2);
-      --border-color: #d4c0ff;
+      --primary-color: #7c5cdb;
+      --primary-hover: #6a4ec7;
+      --bg-color: #f8f7ff;
+      --box-shadow: 0 8px 32px rgba(124, 92, 219, 0.1);
+      --border-color: #e6e3ff;
+      --gradient-start: #7c5cdb;
+      --gradient-end: #9f7aea;
     }
 
     * {
@@ -20,213 +24,265 @@
     }
 
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: 'Noto Sans KR', sans-serif;
       background: var(--bg-color);
       margin: 0;
       padding: 20px;
       line-height: 1.6;
       word-break: keep-all;
       background-image: 
-        radial-gradient(circle at 50% 50%, rgba(155, 109, 255, 0.1) 0%, transparent 60%),
-        url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="20" height="20" opacity="0.05"><text x="50%" y="50%" text-anchor="middle" dy=".35em" font-size="80">✦</text></svg>');
+        radial-gradient(circle at 10% 20%, rgba(124, 92, 219, 0.05) 0%, transparent 50%),
+        radial-gradient(circle at 90% 80%, rgba(159, 122, 234, 0.05) 0%, transparent 50%);
+      min-height: 100vh;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 30px;
-      border-radius: 15px;
+      background: rgba(255, 255, 255, 0.98);
+      padding: 40px;
+      border-radius: 24px;
       box-shadow: var(--box-shadow);
-      border: 1px solid var(--border-color);
+      border: 1px solid rgba(124, 92, 219, 0.1);
+      backdrop-filter: blur(10px);
     }
 
     h1 {
-      font-size: 2.2rem;
-      margin: 0 0 20px 0;
-      color: var(--primary-color);
+      font-size: 2.4rem;
+      margin: 0 0 30px 0;
+      background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       text-align: center;
-      text-shadow: 0 0 10px rgba(155, 109, 255, 0.3);
-      font-weight: bold;
-      letter-spacing: 0.1em;
-    }
-
-    h1::before, h1::after {
-      content: "✧";
-      color: var(--primary-color);
-      margin: 0 15px;
-      font-size: 1.5rem;
+      font-weight: 700;
+      letter-spacing: -0.02em;
+      line-height: 1.3;
     }
 
     h2 {
-      font-size: 1.5rem;
-      margin: 20px 0;
+      font-size: 1.6rem;
+      margin: 25px 0 20px 0;
       color: var(--primary-color);
-      border-bottom: 2px solid rgba(155, 109, 255, 0.3);
-      padding-bottom: 10px;
+      font-weight: 600;
+      letter-spacing: -0.01em;
     }
 
     h3 {
-      font-size: 1.2rem;
-      margin: 15px 0;
-      color: #6a4ca6;
+      font-size: 1.3rem;
+      margin: 20px 0 15px 0;
+      color: #444;
+      font-weight: 500;
     }
 
     p {
-      margin: 15px 0;
+      margin: 20px 0;
       text-align: center;
       line-height: 1.8;
       color: #666;
+      font-size: 1.1rem;
+    }
+
+    strong {
+      color: var(--primary-color);
+      font-weight: 600;
     }
 
     .input-area {
-      background: rgba(245, 240, 255, 0.5);
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 25px;
-      box-shadow: 0 2px 6px rgba(155, 109, 255, 0.1);
+      background: #ffffff;
+      border-radius: 20px;
+      padding: 30px;
+      margin-bottom: 30px;
+      box-shadow: 0 4px 20px rgba(124, 92, 219, 0.08);
       border: 1px solid var(--border-color);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .input-area:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 25px rgba(124, 92, 219, 0.12);
     }
 
     .input-group {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
 
     .input-area label {
       display: block;
       width: 100%;
-      margin-bottom: 8px;
-      font-weight: bold;
-      color: #6a4ca6;
+      margin-bottom: 10px;
+      font-weight: 500;
+      color: #444;
+      font-size: 1.05rem;
     }
 
     .input-area input {
       width: 100%;
-      padding: 12px;
-      border: 1px solid var(--border-color);
-      border-radius: 6px;
-      font-size: 16px;
-      background: rgba(255, 255, 255, 0.9);
+      padding: 15px;
+      border: 2px solid var(--border-color);
+      border-radius: 12px;
+      font-size: 1.05rem;
+      background: #ffffff;
       transition: all 0.3s ease;
+      color: #333;
     }
 
     .input-area input:focus {
       outline: none;
       border-color: var(--primary-color);
-      box-shadow: 0 0 10px rgba(155, 109, 255, 0.2);
+      box-shadow: 0 0 0 4px rgba(124, 92, 219, 0.1);
     }
 
     button {
       width: 100%;
-      padding: 15px;
-      background: var(--primary-color);
+      padding: 18px;
+      background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
       color: white;
       border: none;
-      border-radius: 6px;
-      font-size: 18px;
+      border-radius: 14px;
+      font-size: 1.2rem;
       cursor: pointer;
       transition: all 0.3s ease;
-      font-weight: bold;
-      letter-spacing: 0.1em;
-      box-shadow: 0 4px 15px rgba(155, 109, 255, 0.3);
+      font-weight: 600;
+      letter-spacing: 0.03em;
+      box-shadow: 0 4px 15px rgba(124, 92, 219, 0.2);
     }
 
     button:hover {
-      background: var(--primary-hover);
       transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(155, 109, 255, 0.4);
+      box-shadow: 0 6px 20px rgba(124, 92, 219, 0.3);
     }
 
     table.result-table {
       width: 100%;
       border-collapse: separate;
       border-spacing: 0;
-      margin: 20px 0;
-      font-size: 15px;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 8px;
+      margin: 25px 0;
+      font-size: 1.05rem;
+      background: #ffffff;
+      border-radius: 16px;
       overflow: hidden;
-      border: 1px solid var(--border-color);
-    }
-
-    #resultSection {
-      margin-top: 30px;
-    }
-
-    #resultSection > div {
-      margin-bottom: 30px;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(155, 109, 255, 0.1);
-      border: 1px solid var(--border-color);
+      box-shadow: 0 4px 20px rgba(124, 92, 219, 0.08);
     }
 
     th, td {
-      border: 1px solid var(--border-color);
-      padding: 12px;
+      padding: 16px;
       text-align: center;
-      color: #666;
+      border-bottom: 1px solid var(--border-color);
     }
 
     th {
       background: var(--primary-color);
       color: white;
-      font-weight: normal;
+      font-weight: 500;
+      letter-spacing: 0.03em;
+    }
+
+    td {
+      color: #555;
     }
 
     .interpret-box {
-      background: rgba(245, 240, 255, 0.5);
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 25px;
+      margin: 25px 0;
+      box-shadow: 0 4px 20px rgba(124, 92, 219, 0.08);
       border: 1px solid var(--border-color);
-      border-radius: 8px;
-      padding: 20px;
-      margin: 20px 0;
     }
 
     .interpret-text {
       white-space: pre-wrap;
       line-height: 1.8;
-      font-size: 15px;
-      color: #666;
+      font-size: 1.05rem;
+      color: #555;
     }
 
     .kakao-link {
       display: block;
       width: 100%;
-      max-width: 300px;
-      margin: 30px auto;
-      padding: 15px;
+      max-width: 320px;
+      margin: 40px auto;
+      padding: 18px;
       background: #FEE500;
-      color: #000;
+      color: #000000;
       text-align: center;
       text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
+      border-radius: 14px;
+      font-weight: 600;
+      font-size: 1.1rem;
       transition: all 0.3s ease;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
     .kakao-link:hover {
-      opacity: 0.9;
       transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
     }
 
     .footer-text {
       text-align: center;
-      margin: 30px 0;
-      font-size: 1.3rem;
-      color: var(--primary-color);
-      font-weight: bold;
-      text-shadow: 0 0 10px rgba(155, 109, 255, 0.2);
+      margin: 40px 0;
+      font-size: 1.4rem;
+      background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 600;
     }
 
-    /* 모바일 최적화 */
+    /* 특별 효과 */
+    .number-decoration {
+      position: absolute;
+      font-size: 200px;
+      opacity: 0.03;
+      z-index: -1;
+      color: var(--primary-color);
+      font-weight: 700;
+    }
+
+    .number-1 {
+      top: 10%;
+      left: 5%;
+      transform: rotate(-15deg);
+    }
+
+    .number-2 {
+      bottom: 10%;
+      right: 5%;
+      transform: rotate(15deg);
+    }
+
+    /* 반응형 디자인 */
     @media screen and (max-width: 768px) {
       body {
-        padding: 10px;
+        padding: 15px;
       }
 
+      .container {
+        padding: 25px;
+      }
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      h2 {
+        font-size: 1.4rem;
+      }
+
+      .input-area {
+        padding: 20px;
+      }
+
+      .footer-text {
+        font-size: 1.2rem;
+      }
+
+      .number-decoration {
+        display: none;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
       .container {
         padding: 20px;
       }
@@ -235,43 +291,24 @@
         font-size: 1.8rem;
       }
 
-      h1::before, h1::after {
-        margin: 0 10px;
-        font-size: 1.2rem;
-      }
-
-      .input-area {
+      button {
         padding: 15px;
-      }
-
-      .footer-text {
         font-size: 1.1rem;
       }
-    }
 
-    /* 작은 모바일 화면 최적화 */
-    @media screen and (max-width: 320px) {
-      .container {
-        padding: 15px;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      .input-area input {
-        font-size: 14px;
+      .interpret-box {
+        padding: 20px;
       }
     }
   </style>
 </head>
 
 <body>
+<div class="number-decoration number-1">1</div>
+<div class="number-decoration number-2">8</div>
 <div class="container">
-  <h1>타로 운세 풀이</h1>
-  <p>신비로운 타로의 세계로 여러분을 초대합니다<br>
-     <strong>운명의 길잡이 · 사랑타로 · 직업운</strong><br>
-     진실된 마음으로 상담해드리겠습니다</p>
+  <h1>수비학으로 보는 운명의 길</h1>
+  <p>당신만의 특별한 숫자가 들려주는 이야기를<br>과학적이고 체계적인 수비학으로 풀어드립니다</p>
 
   <div class="input-area">
     <h2>양력 생년월일</h2>
@@ -314,63 +351,63 @@
     <input type="hidden" id="haeunYear" value="2025">
   </div>
 
-  <button onclick="calculateAll()">타로 운세 보기</button>
+  <button onclick="calculateAll()">나의 운명수 보기</button>
 
   <div id="resultSection">
-    <h2>운세 결과</h2>
+    <h2>수비학 분석결과</h2>
 
     <div id="solarSajuDiv" style="display:none;">
-      <h3>양력 운세</h3>
+      <h3>양력 수비학</h3>
       <table id="solarSajuTable" class="result-table"></table>
       <div class="interpret-box" id="solarInterpretBoxFirst" style="display:none;">
-        <h3>첫 번째 카드의 메시지</h3>
+        <h3>운명수 분석</h3>
         <div class="interpret-text" id="solarInterpretTextFirst"></div>
       </div>
       <div class="interpret-box" id="solarInterpretBoxSecond" style="display:none;">
-        <h3>두 번째 카드의 메시지</h3>
+        <h3>성격수 분석</h3>
         <div class="interpret-text" id="solarInterpretTextSecond"></div>
       </div>
     </div>
 
     <div id="lunarSajuDiv" style="display:none;">
-      <h3>음력 운세</h3>
+      <h3>음력 수비학</h3>
       <table id="lunarSajuTable" class="result-table"></table>
       <div class="interpret-box" id="lunarInterpretBoxFirst" style="display:none;">
-        <h3>첫 번째 카드의 메시지</h3>
+        <h3>행운수 분석</h3>
         <div class="interpret-text" id="lunarInterpretTextFirst"></div>
       </div>
       <div class="interpret-box" id="lunarInterpretBoxSecond" style="display:none;">
-        <h3>두 번째 카드의 메시지</h3>
+        <h3>잠재력수 분석</h3>
         <div class="interpret-text" id="lunarInterpretTextSecond"></div>
       </div>
     </div>
 
     <div id="solarHaeunDiv" style="display:none;">
-      <h3>2025년 운세 (양력)</h3>
+      <h3>2025년 운세 수비학</h3>
       <table id="solarHaeunTable" class="result-table"></table>
       <div class="interpret-box" id="solarHaeunInterpretBox" style="display:none;">
-        <h3>2025년 운세 해석</h3>
+        <h3>2025년 개인년수 해석</h3>
         <div class="interpret-text" id="solarHaeunInterpretText"></div>
       </div>
     </div>
 
     <div id="lunarHaeunDiv" style="display:none;">
-      <h3>2025년 운세 (음력)</h3>
+      <h3>2025년 운세 해석</h3>
       <table id="lunarHaeunTable" class="result-table"></table>
       <div class="interpret-box" id="lunarHaeunInterpretBox" style="display:none;">
-        <h3>2025년 운세 해석</h3>
+        <h3>2025년 주기수 해석</h3>
         <div class="interpret-text" id="lunarHaeunInterpretText"></div>
       </div>
     </div>
 
     <div id="nameDiv" style="display:none;">
-      <h3>이름 타로</h3>
+      <h3>이름 수비학</h3>
       <table id="nameTable" class="name-table result-table"></table>
     </div>
   </div>
 </div>
 
-<h2 class="footer-text">더 자세한 타로 상담이 필요하시다면 아래를 클릭해주세요</h2>
+<h2 class="footer-text">위 내용이 70%정도 맞으셨다면 클릭하세요!<br>당신의 미래도 알려 드립니다.</h2>
 <a href="http://pf.kakao.com/_Cgxcdn" class="kakao-link">카카오톡 상담 바로가기</a>
 
 <script src="script.js"></script>
